--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,4 +1,3 @@
-Lines go past the 2nd dot even when connected
 
 game has to shrink when player using iPhone. 
 the game has to adjust size to the players screen.
@@ -6,4 +5,6 @@ the game has to adjust size to the players screen.
 Use best practices for mobile devices.
 Use MIN, MAX, CLAMP, VW, VH
 
+border radius
 
+intro made by vito
